# task_agents

./: main.py  pyproject.toml  research_agent.py  research_tasks.py  search.py
New folder/: main.py  main2.py  temptest.py
db/: chroma.sqlite3
testing/: main.py  sk_main.py
tools/: browser_tools.py  search_tools.py
