[tool.poetry]
name = "project-test-py"
version = "0.1.0"
description = ""
authors = ["shiva kharbanda: <shiva.kharbanda@daaslabs.ai>"]
readme = "README.md"
packages = [{include = "project_test"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
crewai = {extras = ["tools"], version = "^0.30.11"}
unstructured = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
