[tool.poetry]
name = "project-test-py"
version = "0.1.0"
description = ""
authors = ["shiva kharbanda: <shiva.kharbanda@daaslabs.ai>"]
readme = "README.md"
packages = [{include = "project_test"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
unstructured = "^0.14.4"
langchain = "0.2.3"
langchain-openai = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
